# Babylonia-terminal

./: .gitignore  Cargo.toml  README.md  build.sh  flake.nix  shell.nix
.github/: FUNDING.yml
.github/workflows/: Gui-release.yml  cli-release.yml  gui-release.yml  release.yml
babylonia-terminal/: Cargo.toml
babylonia-terminal-cli/: Cargo.toml  TDData-data.db
babylonia-terminal-cli/src/: arguments.rs  commands.rs  game.rs  lib.rs  main.rs  reporter.rs  utils.rs
babylonia-terminal-gui/: Cargo.toml  build.rs
babylonia-terminal-gui/assets/: resources.xml
babylonia-terminal-gui/src/: lib.rs  manager.rs
babylonia-terminal-gui/src/ui/: mod.rs
babylonia-terminal-gui/src/ui/pages/: about.rs  game.rs  mod.rs  settings.rs
babylonia-terminal-gui/src/ui/pages/steps/: choose_game_directory.rs  download_components.rs  mod.rs  welcome.rs
babylonia-terminal-sdk/: Cargo.toml
babylonia-terminal-sdk/src/: components_downloader.rs  game_config.rs  game_manager.rs  game_patcher.rs  game_state.rs  lib.rs
babylonia-terminal-sdk/src/components/: component_downloader.rs  dxvk_component.rs  game_component.rs  mod.rs  pgr_component.rs  proton_component.rs  wine_component.rs
babylonia-terminal-sdk/src/utils/: fs.rs  github_requester.rs  kuro_prod_api.rs  mod.rs
babylonia-terminal/src/: main.rs
babylonia_terminal_launcher/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
babylonia_terminal_launcher/lib/: app.dart  main.dart
babylonia_terminal_launcher/lib/models/: background.dart  config.dart  dependencies.dart  dxvk.dart  error_reporter.dart  fonts.dart  game.dart  github.dart  proton.dart  release_notice.dart  settings.dart
babylonia_terminal_launcher/lib/providers/: game_state_provider.dart  providers.dart  settings_provider.dart
babylonia_terminal_launcher/lib/screens/: home_screen.dart  screens.dart  settings_screen.dart  setup_screen.dart
babylonia_terminal_launcher/lib/screens/settings/: game_settings_page.dart  general_settings_page.dart  settings_pages.dart  style_settings_page.dart
babylonia_terminal_launcher/lib/screens/setups/: proton_screen.dart  steps_screen.dart  welcome_screen.dart
babylonia_terminal_launcher/lib/widgets/: background.dart  background_widget.dart  gtk_spinner_widget.dart  play_button.dart  release_notice_widget.dart  selectable_yaru_expansion_panel.dart  serious_lee_widget.dart  simple_button.dart
babylonia_terminal_launcher/lib/widgets/steps/: dependencies_steps_widget.dart  dxvk_steps_widget.dart  fonts_steps_widget.dart  game_steps_widget.dart  proton_steps_widget.dart
babylonia_terminal_launcher/linux/: my_application.cc
babylonia_terminal_launcher/messages/: config.proto  error.proto  game_state.proto  github.proto
babylonia_terminal_launcher/messages/steps/: dependencies.proto  dxvk.proto  fonts.proto  game.proto  proton.proto
babylonia_terminal_launcher/native/hub/: Cargo.toml
babylonia_terminal_launcher/native/hub/src/: config.rs  dependencies.rs  dxvk.rs  fonts.rs  game.rs  game_state.rs  github.rs  lib.rs  proton.rs
