[package]
name = "babylonia-terminal-cli"
version = "0.1.0"
edition = "2021"
authors = ["ALEZ-DEV <raidersfocus@gmail.com>"]
description = "A launcher for a certain anime game "
repository = "https://github.com/ALEZ-DEV/Babylonia-terminal"
license = "LGPL-3.0-or-later"
keywords = ["launcher", "game"]

[[bin]]
name = "babylonia-terminal-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
babylonia-terminal-sdk = "0.1.0" # { path = "./../babylonia-terminal-sdk" }
# downloader = { git = "https://github.com/ALEZ-DEV/downloader" } # version = "0.2.7",
downloader-for-babylonia-terminal = "0.1.0"
indicatif = "0.17.8"
log = "0.4.21"
simple_logger = "4.3.3"
tokio = { version = "1.37.0", features = ["full"] }
wincompatlib = "0.7.4"
