[package]
name = "babylonia-terminal-cli"
version = "0.1.0"
edition = "2021"
authors = ["ALEZ-DEV <raidersfocus@gmail.com>"]
description = "A launcher for a certain anime game on linux"
repository = "https://github.com/ALEZ-DEV/Babylonia-terminal"
license = "LGPL-3.0-or-later"
keywords = ["launcher", "game"]

[[bin]]
name = "babylonia-terminal-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
babylonia-terminal-sdk = { path = "./../babylonia-terminal-sdk" }
clap = { version = "4.5.7", features = ["derive"] }
derive = "1.0.0"
dialoguer = "0.11.0"
downloader = { git = "https://github.com/ALEZ-DEV/downloader" }   # version = "0.2.7",
indicatif = "0.17.8"
log = "0.4.21"
simple_logger = "4.3.3"
tokio = { version = "1.37.0", features = ["full"] }
wincompatlib = "0.7.4"
