[package]
name = "babylonia-terminal-sdk"
version = "0.1.0"
edition = "2021"
authors = ["ALEZ-DEV <raidersfocus@gmail.com>"]
description = "A SDK for launcher for a certain anime game "
repository = "https://github.com/ALEZ-DEV/Babylonia-terminal"
license = "LGPL-3.0-or-later"
keywords = ["launcher", "game"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chksum-md5 = { version = "0.0.0", features = ["reader"] }
dirs = "5.0.1"
dotenv = "0.15.0"
downloader = { git = "https://github.com/ALEZ-DEV/downloader" } # version = "0.2.7",
flate2 = "1.0.28"
fs_extra = "1.3.0"
log = "0.4.21"
reqwest = { version = "0.12.2", features = ["gzip"] }
rust-embed = "8.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tar = "0.4.40"
tokio = { version = "1.37.0", features = ["fs"] }
wincompatlib = { version = "0.7.4", features = [
    "dxvk",
    "wine-bundles",
    "wine-proton",
    "wine-fonts",
    "winetricks",
] }
