[package]
name = "babylonia-terminal-sdk"
version = "0.1.2"
edition = "2021"
authors = ["ALEZ-DEV <raidersfocus@gmail.com>"]
description = "A SDK for launcher for a certain anime game "
repository = "https://github.com/ALEZ-DEV/Babylonia-terminal"
license = "LGPL-3.0-or-later"
keywords = ["launcher", "game"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chksum-md5 = { version = "0.0.0", features = ["reader"] }
dirs = "5.0.1"
dotenv = "0.15.0"
downloader = { workspace = true }
flate2 = "1.0.28"
fs_extra = "1.3.0"
futures = "0.3.30"
log = "0.4.21"
num_cpus = "1.16.0"
reqwest = { version = "0.12.2", features = ["gzip"] }
rust-embed = "8.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tar = "0.4.40"
tokio = { version = "1.37.0", features = ["fs"] }
wincompatlib = { version = "0.7.5", features = [
    "dxvk",
    "wine-bundles",
    "wine-fonts",
    "winetricks",
] }
xz2 = "0.1.7"
