[package]
name = "babylonia-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
babylonia-terminal-cli = { path = "./../babylonia-terminal-cli" }
babylonia-terminal-gui = { path = "./../babylonia-terminal-gui" }
log = "0.4.22"
simple_logger = "5.0.0"
tokio = { version = "1.37.0", features = ["full"] }
clap = "4.5.23"
